--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,50 @@
+/*header*/
+/*section1*/
 .home {
 	background-image: url(../img/home.jpg);
 	background-size: 100%;
-	margin-top: -2%;
 	padding-bottom: 10%;
 	padding-top: 10%;
 }
 .titulo {
 	color: white;
 }
-.fondoblanco {
+/*section2*/
+.fondo-blanco {
 	background-color: white;
 	background-size: 100%;
 }
-.hackathon {
-	background-image: url(../img/hackathon.jpg);
-	background-size: 100%;
-}
-.fondoamarillo {
+/*section3*/
+.fondo-amarillo {
 	background-color: yellow;
+}
+.imghackathon {
+    width: 90%;
+    margin: 5% 0% 5% 5%;
+}
+/*section4*/
+.imgmade {
+    width: 100%;
+    margin: 10%;
+}
+.formulario {
+	margin: 8%;
+}
+ul li {
+	list-style: none;
+	margin-left: -7%;
+}
+li {
+	margin: 1%;
+}
+/*foot*/
+.fondo-azul {
+	background-color: rgb(46, 150, 187);
+	padding: 2% 0%;
+}
+.white {
+	color: white;
+}
+.yellow {
+	color: yellow;
 }
